[package]
name = "ImgZap"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced" }
image = "0.25.6"
ico = "0.4"
rfd = "0.15.3" # 打开文件选择器
walkdir = "2.5"
rayon = "1.10.0" # 并行处理
resvg = "0.45" # SVG图片处理
tika-magic = "0.2.5" # 文件类型检测
vtracer = "0.6.3" # 转换为SVG
oxipng = { version = "9", features = ["parallel", "zopfli", "filetime"], default-features = false } # 压缩PNG图片
anyhow = "1"

[build-dependencies]
embed-resource = "3.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"